// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show summary with Multiple expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Showing 
      <span>
        3
      </span>
       
      expenses
      , adding up 
      <span>
        $1,807.90
      </span>
    </h1>
    <Link
      className="button"
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;

exports[`Should show summary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Showing 
      <span>
        1
      </span>
       
      expense
      , adding up 
      <span>
        $1.95
      </span>
    </h1>
    <Link
      className="button"
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;
